--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/johnclark96/dark-legions/issues"
   },
-  "homepage": "https://github.com/johnclark96/dark-legions#readme"
+  "homepage": "https://github.com/johnclark96/dark-legions#readme",
+  "devDependencies": {
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "semantic-release": "^19.0.5"
+  }
 }
